--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="div-4 bg1">
                 <div class="left-div">
                     <h4>Name</h4>
-                    <p>SADOKAT KHAKIMOV</p>
+                    <p>SADOKAT KHAKIMOVA</p>
                     <h4>Address</h4>
                     <p> PEARLAND, TX 77581 </p>
                     <h4>Email</h4>
