--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="div-4 bg1">
                 <div class="left-div">
                     <h4>Name</h4>
-                    <p>SADOKAT(Saddy) KHAKIMOVA</p>
+                    <p>SADOKAT KHAKIMOVA</p>
                     <h4>Address</h4>
                     <p> PEARLAND, TX 77581 </p>
                     <h4>Email</h4>
@@ -59,7 +59,7 @@
                 <div class="right-div">
 
                     <div class="div-7">
-                        <h1>SADOKAT KHAKIMOVA</h1>
+                        <h1>SADOKAT (Saddy) KHAKIMOVA</h1>
                         <h3>Background</h3>
                         <p> Although I was born and raised in Uzbekistan, the United States is where I found my true purpose. I am a 22-year-old free spirit who enjoys life and tries to live every day to the fullest. I am passionate about subjects that make others see nightmares: math and computers. </p>
                         <p> My transfer major is computer science, and my career goal is to become a CEO. I am a daughter who wants her hard-working mother to have the best life she deserves. I am an enthusiastic student who is eager to learn more. I am a leader who wants to lead with example. </p>
