Welcome message changed

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="right-div">
 
                     <div class="div-7">
-                        <h1>SADOKAT KHAKIMOVA</h1>
+                        <h1>WELCOME TO SADDY'S WORLD</h1>
                         <h3>Background</h3>
                         <p> Although I was born and raised in Uzbekistan, the United States is where I found my true purpose. I am a 22-year-old free spirit who enjoys life and tries to live every day to the fullest. I am passionate about subjects that make others see nightmares: math and computers. </p>
                         <p> My transfer major is computer science, and my career goal is to become a CEO. I am a daughter who wants her hard-working mother to have the best life she deserves. I am an enthusiastic student who is eager to learn more. I am a leader who wants to lead with example. </p>
